objects/LBI_ALT_SKU__c.object
<CustomObject>
    <description>Lattice Additional Info Table for displaying SKU lists</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LBI_ALT_SKUS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_SKU_Description__c</fullName>
        <label>Alternative SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_SKU__c</fullName>
        <label>Alternative SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SKU_Description__c</fullName>
        <label>Current SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SKU_Rev__c</fullName>
        <label>Current SKU Sales</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_SKU__c</fullName>
        <label>Current SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Site_ID__c</fullName>
        <label>Customer-Site ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Site_Name__c</fullName>
        <label>Customer-Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipLabel>LBI ALT SKUS</relationshipLabel>
        <relationshipName>LBI_ALT_SKUS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LBI ALT SKU</label>
    <nameField>
        <label>ALT SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LBI ALT SKUS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>